src/objects/Progress_Notes__c.object
<CustomObject>
    <description>As per SFDCSPT-413 this Object was created to track Progress Notes entered on Opportunities.</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>This date field refers to the activities referenced in the Note</description>
        <inlineHelpText>Enter the date of the activities referenced in this Note</inlineHelpText>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Used by multiple teams to enter notes related to the Opportunity. JIRA: SFDCSPT-413</description>
        <inlineHelpText>This is a rich text field that supports links, images, etc., in addition to plain text. Note: only the first 999 characters will be displayed in a Salesforce report. The rest is visible directly on the record and in a downloaded report.</inlineHelpText>
        <label>Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Opportunity against which the Sales Engineering Notes Field will be Populated</description>
        <inlineHelpText>Related Opportunity against which the Sales Engineering Notes Field will be Populated</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Progress Note</label>
    <nameField>
        <displayFormat>PRN-{0000}</displayFormat>
        <label>Progress Note</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>